# AED2-P1-TECFS

./: .gitignore  Doxyfile  README.md
ControllerNode/: CMakeLists.txt  ControllerNode.cpp  ControllerNode.h  main.cpp
RAID/DISK1/: BLOCK1.txt  METADATA.txt
SetupXML/: Disk1.xml  Disk2.xml  Disk3.xml  Disk4.xml  Disk5.xml
TECFS_Disk/: CMakeLists.txt  DataBlock.cpp  DataBlock.h  DiskNode.cpp  DiskNode.h  Metadata.cpp  Metadata.h  main.cpp
ceROBOT/: CMakeLists.txt  ceROBOT.cpp  ceROBOT.h  main.cpp
ceROBOTFiles/: BLOCK1.txt  BLOCK2.txt  BLOCK3.txt  BLOCK4.txt  supah_secret_ninja_code.txt
ceSEARCH/: ceSEARCH.pro  cesearch_gui.cpp  cesearch_gui.h  cesearch_gui.ui  main.cpp
lib/: Huffman.cpp  Huffman.h  List.h  RequestConstants.h  UtilityText.cpp  UtilityText.h
